# mcp-submatcher

./: .gitignore  LICENSE  README.md  SKILL.md  config_nlp.py  mcp_adapter.py  mcp_server.py  pyproject.toml
core/: __init__.py  config.yaml  submatcher.py
docs/: SYSTEM_MOD_LOG.md  开发需求.md
